SNRGY-1393 /queries allow requesting time format
